--- a/src/main/resources/templates/content/mypage/myInfor.html
+++ b/src/main/resources/templates/content/mypage/myInfor.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
-<html lang="ko"
-      xmlns:th="http://www.thymeleaf.org">
-
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>detail</title>
+    <title>Detail</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         hr {
@@ -24,66 +22,62 @@
         }
     </style>
 </head>
-
 <body>
 <header th:replace="~{/header/header :: headerFragment}"></header>
-
 <div class="container-fluid">
     <div class="row">
         <!-- Sidebar -->
         <header th:replace="~{/sidebar/sidebar :: sidebarFragment}"></header>
-
         <!-- Main -->
         <main role="main" class="col-md-9 col-lg-10 px-md-4" style="margin-left: 200px">
             <br>
             <h2 class="text-center">마이 페이지</h2>
             <hr>
-
             <div class="row">
                 <div class="col-md-6">
-                    <div class="card-body" style="padding-top: 50px; padding-bottom: 50px;">
-                        <p>ID: ${}</p>
-                        <p>PW: ${}</p>
-                        <p>닉네임: ${}</p>
-                        <p>주소: ${}</p>
+                    <div class="card mb-3">
+                        <div class="card-body">
+                            <h4 class="card-title">회원 정보</h4>
+                            <p class="card-text"><strong>아이디:</strong> <span th:text="${user.usersId}"></span></p>
+                            <p class="card-text"><strong>핸드폰 번호:</strong> <span th:text="${user.getPhone()}"></span></p>
+                            <p class="card-text"><strong>닉네임:</strong> <span th:text="${user.nickName}"></span></p>
+                            <p class="card-text"><strong>주소:</strong> <span th:text="${user.detailAddress}"></span></p>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="text-right"> <!-- 이 부분 수정 -->
-                        <button class="custom-button">회원 정보 변경</button>
+                    <div class="text-right">
+                        <button class="btn custom-button">회원 정보 변경</button>
                     </div>
                 </div>
             </div>
-
-            <div class="card-body" style="padding-top: 50px; padding-bottom: 50px;">
-                <div class="custom-box">
-                    <p>책 갈피 이용 내역</p>
-                    <div>
+            <div class="card mb-3">
+                <div class="card-body">
+                    <h4 class="card-title">책 갈피 이용 내역</h4>
+                    <div class="table-responsive">
                         <table class="table table-bordered">
                             <thead>
                             <tr>
                                 <th>책 제목</th>
-                                <th>사용한 책갈피 개수</th>
-                                <th>사용 날짜</th>
+                                <th>포인트</th>
+                                <th>날짜</th>
                             </tr>
                             </thead>
                             <tbody>
-                            <!-- 여기에 서버에서 가져온 데이터를 반복해서 표시하는 Thymeleaf 코드 추가 -->
-                            <tr th:each="record : ${bookmarks}">
-                                <td th:text="${record.bookTitle}"></td>
-                                <td th:text="${record.bookmarkCount}"></td>
-                                <td th:text="${record.usageDate}"></td>
+                            <!-- user.pointHistoryList를 반복하여 데이터 표시 -->
+                            <tr th:each="pointHistory : ${user.pointHistoryList}">
+                                <td th:text="${pointHistory.transactions.books.title}"></td>
+                                <td th:text="${pointHistory.form} + ${pointHistory.point}"></td>
+                                <td th:text="${pointHistory.createdDate}"></td>
                             </tr>
                             </tbody>
                         </table>
                     </div>
+                </div>
             </div>
         </main>
-
     </div>
 </div>
-
 <footer th:replace="~{/footer/footer :: footerFragment}"></footer>
-
 </body>
 </html>
