--- a/src/main/resources/templates/sidebar/sidebar.html
+++ b/src/main/resources/templates/sidebar/sidebar.html
@@ -4,6 +4,17 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="/static/css/App.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        /* Add CSS for the sub-menu container */
+        #myPageSubMenu {
+            display: none; /* Initially hidden */
+        }
+
+        /* Show the sub-menu when hovering over the 마이페이지 link */
+        .nav-item:hover #myPageSubMenu {
+            display: block;
+        }
+    </style>
 </head>
 
 <body>
@@ -16,17 +27,20 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#" style="color: black; font-weight: bold;">마이페이지</a>
-                <ul class="nav flex-column ml-3">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/user/mypage/myinfor" style="color: black; font-weight: bold;">내 정보</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/user/mypage/givelist" style="color: black; font-weight: bold;">Give</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/user/mypage/takelist" style="color: black; font-weight: bold;">Take</a>
-                    </li>
-                </ul>
+                <!-- Wrap the sub-menu items in a container with an id -->
+                <div id="myPageSubMenu">
+                    <ul class="nav flex-column ml-3">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/user/mypage/myinfor" style="color: black; font-weight: bold;">내 정보</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/user/mypage/givelist" style="color: black; font-weight: bold;">Give</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/user/mypage/takelist" style="color: black; font-weight: bold;">Take</a>
+                        </li>
+                    </ul>
+                </div>
             </li>
         </ul>
     </div>
