feat : 회원 로그인 시 토큰 발급/재발급 완료.

--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -9,7 +9,7 @@
 <body>
 <h1> 로그인 완료</h1>
 
-<button type="button" class="btn btn-secondary" onclick="location.href='/logout'">로그아웃</button>
+<button type="button" class="btn btn-secondary" onclick="location.href='/user/logout'">로그아웃</button>
 
 </body>
 </html>
