--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -28,7 +28,9 @@
           </form>
           <div class="d-flex justify-content-between mt-3">
             <a href="/user/signup" class="text-white" style="text-decoration: underline;">회원가입</a>
-            <a href="/auth/kakao" className="text-warning mt-3 d-block" style="text-decoration: underline; color: #ffc107;">
+            <a href="https://kauth.kakao.com/oauth/authorize?client_id=f284189e44088e0bbdc67af1bf46cc1b
+&redirect_uri=http://localhost:8099/login/oauth2/code/kakao&response_type=code
+" className="text-warning mt-3 d-block" style="text-decoration: underline; color: #ffc107;">
              카카오 로그인 <img th:src="@{/images/kakao.png}" alt="Kakao Logo" style="height: 24px; margin-right: 8px;"></a>
           </div>
           <div class="d-flex mt-3">
