--- a/src/main/resources/templates/content/user/boardAddForm.html
+++ b/src/main/resources/templates/content/user/boardAddForm.html
@@ -4,7 +4,9 @@
 <head>
     <title>Add Board</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href=".static/css/App.css">
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.1/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 </head>
 <body>
 <!-- header -->
@@ -17,92 +19,225 @@
 
         <!-- main 나눔글 작성하기-->
         <main role="main" class="col-md-9 col-lg-10 px-md-4" style="height: auto; min-height: 100%; margin-left: 200px">
-        <div class = "container">
-            <h2 class="mb-3 mt-3 text-center">나눔하겠습니다!</h2>
-            <!-- 검색창 -->
-            <form action="/board/bookSearch" method="get">
-            <div class="col-md-5 d-flex justify-content-between align-items-center ">
-                바코드 입력
-                <input type="text" name="text" class="form-control d-inline-block mx-1" placeholder="ISBN을 입력하세요" th:value="${param.isbn}">
-                <button type="submit" class="btn btn-dark mx-1" style="width: 100px; white-space: nowrap;">검색</button>
-            </div>
-            </form>
+            <div class="container">
+                <h2 class="mb-3 mt-3 text-center">나눔하겠습니다!</h2>
+                <!-- 검색창 -->
+                <!-- todo: 검색 미입력시 예외처리-->
+                <form action="/board/bookSearch" method="get" id="search">
+                    <div class="col-md-5 d-flex justify-content-between align-items-center">
+                        <div class="col-auto"> 바코드 입력</div>
+                        <input type="search" id="searchInput" name="text" class="form-control d-inline-block mx-1" maxlength="50"
+                               placeholder="ISBN을 입력하세요" th:value="${param.isbn}">
+                        <button type="submit" class="btn btn-dark mx-1" onclick="searchValidateForm()" style="width: 100px; white-space: nowrap;">검색
+                        </button>
+                    </div>
+                </form>
 
-<!--             이미지 파일을 업로드하기 위해 enctype을 multipart/form-data로 설정-->
-            <form th:action="@{/board/new}" method="post" enctype="multipart/form-data">
-                <input type="hidden" id="isbn" name="isbn" th:value="${param.isbn}" class="form-control">
-                <div class="mt-3">
-                    <label for="title">도서 제목</label>
-                    <input id="title" name="title" th:value="${param.title}" class="form-control" readonly type="text">
-                </div>
-                <div>
-                    <label for="pubdate">발행일자</label>
-                    <input id="pubdate" name="pubdate" th:value="${param.pubdate}" class="form-control"  readonly type="text">
-                </div>
-                <div>
-                    <label for="publisher">출판사</label>
-                    <input id="publisher" name="publisher" th:value="${param.publisher}" class="form-control" readonly type="text">
-                </div>
-                <div>
-                    <label for="author">저자</label>
-                    <input id="author" name="author" th:value="${param.author}" class="form-control" readonly type="text">
-                </div>
-                <div>
-                    <label for="description">책 소개</label>
-                    <textarea id="description" name="description" class="form-control" th:text="${param.description}" rows="5" readonly style="overflow-y: scroll;"></textarea>
-                </div>
 
-                <div class="form-group mt-4">
-                    <label for="imageUpload">기부하고자 하는 책의 사진 파일을 첨부해주세요. (최대 5장) 오염도나, 책의 외상 등을 촬영해주세요! :)</label>
-                    <!-- input 타입을 file로 설정하고, 파일을 여러 개 선택할 수 있도록 multiple 속성 추가 -->
-                    <input type="file" class="form-control-file" id="imageUpload" name="image" accept="image/*" multiple>
-                </div>
+                <!--이미지 파일을 업로드하기 위해 enctype을 multipart/form-data로 설정-->
+                <form th:action="@{/board/new}" id="form" method="post" enctype="multipart/form-data">
+                    <div class="form-group mt-3"> <!--도서 정보 자동 입력칸 -->
+                        <input type="hidden" id="isbn" name="isbn" th:value="${param.isbn}" class="form-control">
+                        <div>
+                            <label for="title">도서 제목</label>
+                            <input id="title" name="title" th:value="${param.title}" class="form-control" readonly
+                                   type="text">
+                        </div>
+                        <div>
+                            <label for="pubdate">발행일자</label>
+                            <input id="pubdate" name="pubdate" th:value="${param.pubdate}" class="form-control" readonly
+                                   type="text">
+                        </div>
+                        <div>
+                            <label for="publisher">출판사</label>
+                            <input id="publisher" name="publisher" th:value="${param.publisher}" class="form-control"
+                                   readonly type="text">
+                        </div>
+                        <div>
+                            <label for="author">저자</label>
+                            <input id="author" name="author" th:value="${param.author}" class="form-control" readonly
+                                   type="text">
+                        </div>
+                        <div>
+                            <label for="description">책 소개</label>
+                            <textarea id="description" name="description" class="form-control"
+                                      th:text="${param.description}" rows="5" readonly
+                                      style="overflow-y: scroll;"></textarea>
+                        </div>
+                    </div>
 
-                <div class="mt-4">
-                    <label for="message">기부어의 한마디 (나눔받을 테이커에게 전하고 싶은 말이나 인상깊었던 책의 부분을 적어주세요! :) </label>
-                    <input id="message" name="message" class="form-control" type="text">
-                </div>
+                    <div class="border mt-5 mb-5"></div> <!--구분선 넣기 -->
 
-                <div class="border mt-5 mb-5"></div>
-                <div> 수거 주소 입력</div>
-                <div>원하시는 수거 주소를 입력해주세요. </div>
-                <div class="form-group row mt-3">
-                    <label for="postcode" class="col-sm-3 col-form-label text-nowrap">주소 :</label>
-                    <div class="col-sm-9">
-                        <div class="input-group">
-                            <input type="text" class="form-control" id="postcode" name="postcode" placeholder="우편번호">
-                            <div class="input-group-append">
-                                <button class="btn btn-outline-secondary" type="button" onclick="sample4_execDaumPostcode()">우편번호 검색</button>
+                    <!--이미지 파일 넣기 -->
+                    <div class="form-group mt-4">  <!--todo: 책 최대 5장으로 제한 -->>
+                        <label for="imageUpload">기부하고자 하는 책의 사진 파일을 첨부해주세요. (최대 5장) 오염도나, 책의 외상 등을 촬영해주세요! :)</label>
+                        <!-- input 타입을 file로 설정하고, 파일을 여러 개 선택할 수 있도록 multiple 속성 추가 -->
+                        <input type="file" class="form-control-file" id="imageUpload" onchange="imgUpload(this)" name="image" accept="image/*"
+                               multiple>
+                    </div>
+
+                    <!-- 기부어의 한마디 -->
+                    <div class="form-group mt-4">
+                        <label for="message">기부어의 한마디 (최대 300자) </label>
+                        <textarea id="message" name="message" class="form-control" maxlength="300" rows="4"
+                                  placeholder="나눔받을 테이커에게 전하고 싶은 말이나 인상깊었던 책의 부분을 적어주세요! :)"
+                                  style="overflow-y: scroll;"></textarea>
+                    </div>
+
+                    <div class="border mt-5 mb-5"></div> <!--구분선 넣기 -->
+
+                    <!--수거정보 입력칸 개인정보, 주소, 정확한 위치 입력 -->
+                    <div class="form-group mt-3">
+                        <div> 수거 정보 입력 (기부하는 도서는 박스에 담아 포장해주세요.)</div>
+                        <div class="row g-3">
+                            <div class="col-md-3">
+                                <label class="visually-hidden" for="username"></label>
+                                <div class="input-group">
+                                    <div class="input-group-text">이름</div>
+                                    <input type="text" class="form-control" id="username" name="name" maxlength="10"
+                                           placeholder="name">
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <label class="visually-hidden" for="phone"></label>
+                                <div class="input-group">
+                                    <div class="input-group-text">전화번호</div>
+                                    <input type="tel" pattern="\d{10,11}" class="form-control" id="phone" name="phone"
+                                           placeholder="010-0000-0000 ('-' 없이 입력)" minlength="10" maxlength="11">
+                                </div>
                             </div>
                         </div>
-                        <input type="text" class="form-control mt-2" id="roadAddress" name="roadAddress" placeholder="도로명주소">
-                        <input type="text" class="form-control mt-2" id="detailAddress" name="detailAddress" placeholder="상세주소">
+                        <div class="form-group row mt-3">
+                            <label for="postcode" class="col-sm-3 col-form-label text-nowrap">주소 :</label>
+                            <div class="col-sm-4">
+                                <div class="input-group">
+                                    <input type="text" pattern="[0-9]+"  class="form-control" id="postcode" name="postcode" minlength="4" maxlength="5"
+                                           placeholder="우편번호">
+                                    <div class="input-group-append">
+                                        <button class="btn btn-outline-secondary" type="button"
+                                                onclick="sample4_execDaumPostcode()">우편번호 검색
+                                        </button>
+                                    </div>
+                                </div>
+                                <input type="text" class="form-control mt-2" id="roadAddress" name="roadAddress" maxlength="100"
+                                       placeholder="도로명주소">
+                                <input type="text" class="form-control mt-2" id="detailAddress" name="detailAddress" maxlength="50"
+                                       placeholder="상세주소">
+                            </div>
+                        </div>
+                        <div class="col-auto col-form-label text-nowrap">
+                            정확한 수거 장소를 선택해주세요.
+                        </div>
+
+                        <div class="col-sm-3 col-form-label text-nowrap">
+                            <div class="form-check">
+                                <input type="radio" id="문앞" name="place" value="문앞" class="form-check-input"/>
+                                <label for="문앞" class="form-check-label">문 앞</label>
+                            </div>
+                            <div class="form-check">
+                                <input type="radio" id="경비실" name="place" value="경비실" class="form-check-input"/>
+                                <label for="경비실" class="form-check-label">관리실</label>
+                            </div>
+                            <div class="form-check">
+                                <input type="radio" id="무인택배함" name="place" value="무인택배함" class="form-check-input"/>
+                                <label for="무인택배함" class="form-check-label">무인택배함</label>
+                            </div>
+                        </div>
                     </div>
-                </div>
 
-                <!-- 제출 버튼 -->
-                <input type="submit" value="제출">
-            </form>
-        </div>
+                    <div class="border mt-5 mb-5"></div> <!--구분선 넣기 -->
+
+                    <div class="container">
+                        <div class="card">
+                            <div class="card-body">
+                                <h2 class="card-title">서비스 이용 약관 동의</h2>
+                                <p class="card-text">이 서비스를 이용하시려면 아래의 약관에 동의하여 주세요.</p>
+                                <li class="mt-1">나눔 책의 품질에 따라 책갈피는 차등지급됩니다. (품질 판정은 가장 낮은 단계를 기준으로 합니다.)</li>
+                                <td class="container mt-1">
+                                    <table class="table mt-2">
+                                        <thead>
+                                        <tr>
+                                            <th scope="col">구분</th>
+                                            <th scope="col">우와 새책~!</th>
+                                            <th scope="col">헌책 감사</th>
+                                            <th scope="col">쓸만하네</th>
+                                            <th scope="col">똥휴지(기부불가)</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                        <tr>
+                                            <td><b>헌 상태</b></td>
+                                            <td>새 것에 가까운 책</td>
+                                            <td>약간의 사용감은 있으나 깨끗한 책</td>
+                                            <td>사용감이 많으며 헌 느낌이 나는 책</td>
+                                            <td>독서 및 이용에 지장이 있는 책</td>
+                                        </tr>
+                                        <tr>
+                                            <td><b>표지</b></td>
+                                            <td>변색/찢어짐/낙서 없음</td>
+                                            <td>희미한 변색/얼룩 있음, 약간의 모서리 해짐, 낙서 없음</td>
+                                            <td>전체적인 변색/모서리 해짐/오염 있음, 2cm 이하의 찢어짐 있음, 낙서 있음</td>
+                                            <td>4cm 초과한 찢어짐 혹은 얼룩 있음</td>
+                                        </tr>
+                                        <tr>
+                                            <td><b>책등/책배</b></td>
+                                            <td>변색/찢어짐/낙서 없음</td>
+                                            <td>희미한 변색/얼룩 있음, 약간의 닳은 흔적 있음, 낙서 없음</td>
+                                            <td>전체적인 변색/모서리 해짐/오염 있음, 낙서 있음 (이름포함)</td>
+                                            <td>2cm 초과한 크기의 얼룩 있음</td>
+                                        </tr>
+                                        <tr>
+                                            <td><b>내부/제본상태</b></td>
+                                            <td>변색/찢어짐/낙서/얼룩 없음, 제본 탈착 없음</td>
+                                            <td>변색/낙서/얼룩 없음, 약간의 접힌 흔적 있음, 제본 탈착 없음</td>
+                                            <td>변색/얼룩/오염 있음, 10쪽 이하의 필기 및 밑줄 있음, 2cm 이하의 찢어짐 있음, 본문 읽기에 지장 없는 부록 없음</td>
+                                            <td>2cm 초과한 찢어짐 혹은 얼룩 있음, 제본 불량, 분책 된 경우</td>
+                                        </tr>
+                                        <tr>
+                                            <td><b>책갈피 지급</b></td>
+                                            <td>10책갈피</td>
+                                            <td>7책갈피</td>
+                                            <td>5책갈피</td>
+                                            <td>0책갈피 (착불반송 혹은 폐기처리)</td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </td>
+                                <li>똥휴지 등급은 나눔불가 상품입니다. 만약 검수결과가 똥휴지 등급일 시 옵션을 선택해주세요.</li>
+                                <div class="col-sm-3 col-form-label text-nowrap">
+                                    <div class="form-check">
+                                        <input type="radio" id="폐기처리" name="process" value="폐기처리"
+                                               class="form-check-input" checked/>
+                                        <label for="폐기처리" class="form-check-label">폐기 처리</label>
+                                    </div>
+                                    <div class="form-check">
+                                        <input type="radio" id="착불반송" name="process" value="착불반송"
+                                               class="form-check-input"/>
+                                        <label for="착불반송" class="form-check-label">착불 반송(기부어 부담)</label>
+                                    </div>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" id="termsCheckbox">
+                                    <label class="form-check-label" for="termsCheckbox">
+                                        서비스 이용 약관에 동의합니다.
+                                    </label>
+                                </div>
+                                <input type="submit" class="btn btn-primary" onclick="submitValidateForm()" value="제출">
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
         </main>
-<!--         Main-->
-<!--        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4">-->
-<!--            <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">-->
-<!--                <h1 class="h2">Dashboard</h1>-->
-<!--                <h1>TEST MAIN</h1>-->
-<!--            </div>-->
-<!--        </main>-->
-
     </div>
 </div>
 
-
 <footer th:replace="~{/footer/footer :: footerFragment}"></footer>
-
 
 </body>
 </html>
-<script th:src="@{/js/member.js}"></script>
 
 <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+
+<script th:src="@{/js/boardAdd.js}"></script>
 
