--- a/src/main/resources/templates/content/admin/boardList.html
+++ b/src/main/resources/templates/content/admin/boardList.html
@@ -19,6 +19,23 @@
             <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                 <h1 class="h2">나눔글 관리</h1>
             </div>
+            <!-- 검색창 -->
+            <br>
+            <form action="/main/search" method="get">
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <select class="custom-select rounded-pill" name="searchType">
+                            <option value="search">통합검색</option>
+                            <option value="title">제목</option>
+                            <option value="author">작가</option>
+                            <option value="publisher">출판사</option>
+                        </select>
+                    </div>
+                    <input type="text" class="form-control rounded-pill" name="search" placeholder=" " aria-label="Search" aria-describedby="search-addon" />
+                    <button type="submit" class="btn btn-outline-primary rounded-pill" style="color: black; border-color: #E2ECE2; background-color: #E2ECE2;">검색</button>
+                </div>
+            </form>
+            <br>
             <div class="table-responsive">
                 <table class="table table-bordered">
                     <thead>
