--- a/src/main/resources/templates/content/mypage/giveList.html
+++ b/src/main/resources/templates/content/mypage/giveList.html
@@ -51,7 +51,7 @@
                             <div class="col-md-4">
                                 <div class="card mb-3">
                                     <!-- 첫 번째 이미지에만 액세스 -->
-                                    <img class="card-img-top" th:src="${book.imagesList[0].imagesUrl}" alt="" width="200" height="300">
+                                    <img class="card-img-top" th:src="${book.imagesList[0].imagesUrl}" th:alt="${book.title}" width="200" height="300">
                                 </div>
                             </div>
                             <div class="col-md-8">
@@ -71,7 +71,7 @@
                                                     <a th:href="@{/board/update/{boardId}(boardId=${board.boardId})}">수정 하기</a>
                                                 </div>
                                                 <div class="status-box">
-                                                    <a th:href="@{/board/delete/{boardId}(boardId=${board.boardId})}">삭제 하기</a>
+                                                    <a th:href="@{/board/delete/{boardId}(boardId=${board.boardId})}" onclick="deleteBoard(${board.boardId})">삭제 하기</a>
                                                 </div>
                                             </div>
                                             <p th:unless="${book.transactions.status.toString() == '신규등록'}" th:text="'상태: ' + ${book.transactions.status}">상태: 상태</p>
@@ -89,5 +89,7 @@
 <footer th:replace="~{/footer/footer :: footerFragment}"></footer>
 </body>
 </html>
+<script th:src="@{/js/board.js}"></script>
+
 
 
