fix: updateBoard와 충돌 해결

--- a/src/main/resources/templates/content/user/boardAddForm.html
+++ b/src/main/resources/templates/content/user/boardAddForm.html
@@ -119,9 +119,9 @@
                                         </button>
                                     </div>
                                 </div>
-                                <input type="text" class="form-control mt-2" id="roadAddress" name="roadAddress" maxlength="100"
+                                <input type="text" class="form-control mt-2" id="roadAddress" name="roadAddress" maxlength="50"
                                        placeholder="도로명주소">
-                                <input type="text" class="form-control mt-2" id="detailAddress" name="detailAddress" maxlength="50"
+                                <input type="text" class="form-control mt-2" id="detailAddress" name="detailAddress" maxlength="30"
                                        placeholder="상세주소">
                             </div>
                         </div>
@@ -222,7 +222,7 @@
                                         서비스 이용 약관에 동의합니다.
                                     </label>
                                 </div>
-                                <input type="submit" class="btn btn-primary" onclick="submitValidateForm()" value="제출">
+                                <input type="submit" class="btn btn-primary" value="제출">
                             </div>
                         </div>
                     </div>
