--- a/src/main/resources/templates/content/user/bookSearch.html
+++ b/src/main/resources/templates/content/user/bookSearch.html
@@ -16,7 +16,7 @@
         <header th:replace="~{/sidebar/sidebar :: sidebarFragment}"></header>
 
         <!-- main 검색 결과 표시 -->
-        <main role="main" class="col-md-9 col-lg-10 px-md-4" style="margin-left: 200px">
+        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4"  style="height: auto; min-height: 100%; margin-left: 200px; margin-bottom: 30px;">
         <div class="container">
             <h2 class="mb-3 mt-3 text-center">검색결과</h2>
             <!-- 검색 결과 표 -->
