--- a/src/main/resources/templates/header/header.html
+++ b/src/main/resources/templates/header/header.html
@@ -8,9 +8,9 @@
             eco-reading
         </h1>
                 <div>
-                <a class="navbar-brand" href="#"><img th:src="@{/images/bookmark.png}" alt="Points" width="30px" height="30px"></a>
-                <a class="navbar-brand" href="#"><img th:src="@{/images/alarm.png}" alt="Alarm" width="30px" height="30px"></a>
-                <a class="navbar-brand" href="#"><img th:src="@{/images/user.png}" alt="User" width="30px" height="30px"></a>
+                <a class="navbar-brand" th:href="@{/main/}"><img th:src="@{/images/bookmark.png}" alt="Points" width="30px" height="30px"></a>
+                <a class="navbar-brand" th:href="@{/main/}"><img th:src="@{/images/alarm.png}" alt="Alarm" width="30px" height="30px"></a>
+                <a class="navbar-brand" th:href="@{/main/}"><img th:src="@{/images/user.png}" alt="User" width="30px" height="30px"></a>
                 </div>
             </nav>
 </header>
