--- a/src/main/resources/templates/content/mypage/myInfor.html
+++ b/src/main/resources/templates/content/mypage/myInfor.html
@@ -29,7 +29,7 @@
         <!-- Sidebar -->
         <header th:replace="~{/sidebar/sidebar :: sidebarFragment}"></header>
         <!-- Main -->
-        <main role="main" class="col-md-9 col-lg-10 px-md-4" style="margin-left: 200px">
+        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4" style="height: auto; min-height: 100%; margin-left: 200px; margin-bottom: 50px" >
             <br>
             <h2 class="text-center">마이 페이지</h2>
             <hr>
