--- a/src/main/resources/templates/content/admin/boardList.html
+++ b/src/main/resources/templates/content/admin/boardList.html
@@ -21,14 +21,13 @@
             </div>
             <!-- 검색창 -->
             <br>
-            <form action="/main/search" method="get">
+            <form action="/admin/search" method="get">
                 <div class="input-group">
                     <div class="input-group-prepend">
                         <select class="custom-select rounded-pill" name="searchType">
-                            <option value="search">통합검색</option>
-                            <option value="title">제목</option>
-                            <option value="author">작가</option>
-                            <option value="publisher">출판사</option>
+                            <option value="search">유저 아이디 검색</option>
+                            <option value="isbn">책 바코드 검색</option>
+                            <option value="status">거래 상태</option>
                         </select>
                     </div>
                     <input type="text" class="form-control rounded-pill" name="search" placeholder=" " aria-label="Search" aria-describedby="search-addon" />
